// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiCheckboxGroup (mocked checkbox) disabled is rendered 1`] = `
<div>
  <oui_checkbox
    checked=""
    class="ouiCheckboxGroup__item"
    disabled=""
    id="1"
    label="kibana"
  />
  <oui_checkbox
    class="ouiCheckboxGroup__item"
    disabled=""
    id="2"
    label="elastic"
  />
</div>
`;

exports[`OuiCheckboxGroup (mocked checkbox) idToSelectedMap is rendered 1`] = `
<div>
  <oui_checkbox
    checked=""
    class="ouiCheckboxGroup__item"
    id="1"
    label="kibana"
  />
  <oui_checkbox
    class="ouiCheckboxGroup__item"
    id="2"
    label="elastic"
  />
</div>
`;

exports[`OuiCheckboxGroup (mocked checkbox) individual disabled is rendered 1`] = `
<div>
  <oui_checkbox
    checked=""
    class="ouiCheckboxGroup__item"
    disabled=""
    id="1"
    label="kibana"
  />
  <oui_checkbox
    class="ouiCheckboxGroup__item"
    id="2"
    label="elastic"
  />
</div>
`;

exports[`OuiCheckboxGroup (mocked checkbox) is rendered 1`] = `
<div
  aria-label="aria-label"
  class="testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;

exports[`OuiCheckboxGroup (mocked checkbox) legend is rendered 1`] = `
<fieldset>
  <legend
    class="ouiFormLegend"
  >
    A legend
  </legend>
</fieldset>
`;

exports[`OuiCheckboxGroup (mocked checkbox) options are rendered 1`] = `
<div>
  <oui_checkbox
    class="ouiCheckboxGroup__item"
    id="1"
    label="kibana"
  />
  <oui_checkbox
    class="ouiCheckboxGroup__item"
    id="2"
    label="elastic"
  />
</div>
`;
